# error-tracker

./: .gitignore  .woke.yaml  API.md  GDPR.md  README.md  charm_requirements.txt  charmcraft.yaml  pyproject.toml  spread.yaml
.github/: copilot-instructions.md
.github/workflows/: build-and-test-charm.yaml  build-and-test-charms.yaml  ci.yaml  release.yaml  zizmor.yaml
charm/: Makefile  charm.py  errortracker.py
charm/tests/: conftest.py  utils.py
charms/: README.md  conftest.py
charms/daisy/: LICENSE  charmcraft.yaml
charms/retracer/: README.md  charmcraft.yaml  requirements.txt
charms/timers/: README.md  charmcraft.yaml
examples/cassie_functions/: README.md  bucket_exists.py  get_average_crashes.py  get_average_instances.py  get_binary_packages_for_user.py  get_bucket_counts.py  get_crash.py  get_crash_count.py  get_crashes_for_bucket.py  get_metadata_for_bucket.py  get_metadata_for_buckets.py  get_package_crash_rate.py  get_package_for_bucket.py  get_package_new_buckets.py  get_problem_for_hash.py  get_retrace_failure_for_bucket.py  get_retracer_count.py  get_retracer_counts.py  get_retracer_means.py  get_signatures_for_bug.py  get_source_package_for_bucket.py  get_stacktrace_for_bucket.py  get_system_image_versions.py  get_total_buckets_by_day.py  get_traceback_for_bucket.py  get_user_crashes.py  get_versions_for_bucket.py  record_bug_for_bucket.py
src/: Makefile  populate-test-data.sh  retracer.py  run-daisy.sh  run-errors.sh  run-retracer.sh
src/daisy/: Makefile  __init__.py  app.py  cassandra_schema.py  configuration.py  gunicorn_config.py  (+9 more)
(+251 files in other folders)
