[project]
name = "error-tracker"
requires-python = ">=3.8"
dynamic = ["version"]

[dependency-groups]
charm-deps = [
    "ops",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "jubilant",
    "pytest",
    "requests",
    "tenacity",
]

[tool.setuptools.dynamic]
version = {attr = "src.errortracker.__version__"}

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.pytest]
pythonpath = ["./src", "./local_config"]
